@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Tue Jul 17 00:22:32 +0200 2007
+// Sat Feb 16 23:24:17 +0100 2008
 //
 // (C) 2005 Jb Evain
 //
@@ -42,7 +42,7 @@ namespace Mono.Cecil.Metadata {
 		MetadataTableReader m_mtrv;
 		BinaryReader m_binaryReader;
 		MetadataRoot m_metadataRoot;
-		IDictionary m_ciCache;
+		int [] m_ciCache;
 
 		int m_blobHeapIdxSz;
 		int m_stringsHeapIdxSz;
@@ -53,7 +53,7 @@ namespace Mono.Cecil.Metadata {
 			m_mtrv = mtrv;
 			m_binaryReader = mtrv.GetReader ();
 			m_metadataRoot = mtrv.GetMetadataRoot ();
-			m_ciCache = new Hashtable ();
+			m_ciCache = new int [13];
 		}
 
 		int GetIndexSize (int rid)
