@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Thu Feb 22 14:39:38 CET 2007
+// Sat Feb 16 23:24:17 +0100 2008
 //
 // (C) 2005 Jb Evain
 //
@@ -40,7 +40,7 @@ namespace Mono.Cecil.Metadata {
 
 		MetadataRoot m_root;
 		MemoryBinaryWriter m_binaryWriter;
-		IDictionary m_ciCache;
+		int [] m_ciCache;
 
 		int m_blobHeapIdxSz;
 		int m_stringsHeapIdxSz;
@@ -50,7 +50,7 @@ namespace Mono.Cecil.Metadata {
 		{
 			m_binaryWriter = mtwv.GetWriter ();
 			m_root = mtwv.GetMetadataRoot ();
-			m_ciCache = new Hashtable ();
+			m_ciCache = new int [13];
 		}
 
 		void WriteBlobPointer (uint pointer)
