@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Tue Jul 17 00:22:33 +0200 2007
+// Sat Feb 16 23:23:29 +0100 2008
 //
 // (C) 2005 Jb Evain
 //
@@ -514,11 +514,11 @@ namespace Mono.Cecil.Metadata {
 
 		internal delegate int TableRowCounter (int rid);
 
-		internal static int GetCodedIndexSize (CodedIndex ci, TableRowCounter rowCounter, IDictionary codedIndexCache)
+		internal static int GetCodedIndexSize (CodedIndex ci, TableRowCounter rowCounter, int [] codedIndexCache)
 		{
-			int bits = 0, max = 0;
-			if (codedIndexCache [ci] != null)
-				return (int) codedIndexCache [ci];
+			int bits = 0, max = 0, index = (int) ci;
+			if (codedIndexCache [index] != 0)
+				return codedIndexCache [index];
 
 			int res = 0;
 			int [] rids;
@@ -638,7 +638,7 @@ namespace Mono.Cecil.Metadata {
 			}
 
 			res = max < (1 << (16 - bits)) ? 2 : 4;
-			codedIndexCache [ci] = res;
+			codedIndexCache [index] = res;
 			return res;
 		}
 	}
